# viwistar_gui

./: README.md  ROS_install_bash  qt5-ros-install  readme.txt  viwistar.desktop  viwistar.sh  viwistar_gui.tar  viwistar_gui使用说明  viwistar_user_instruction
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/pick_place/: SrvTransform.h  SrvTransformRequest.h  SrvTransformResponse.h
devel/include/test_gui/: SrvTransform.h  SrvTransformRequest.h  SrvTransformResponse.h
devel/lib/pick_place/: panda_pick_place
devel/lib/pkgconfig/: fanuc_m16ib20_moveit_config.pc  fanuc_m16ib_moveit_plugins.pc  fanuc_m16ib_support.pc  fanuc_resources.pc  panda_moveit_config.pc  pick_place.pc  tcp_ip.pc  test_gui.pc
devel/lib/tcp_ip/: ethernet_socket
devel/lib/test_gui/: test_gui
devel/share/fanuc_m16ib20_moveit_config/cmake/: fanuc_m16ib20_moveit_configConfig.cmake
devel/share/fanuc_m16ib_moveit_plugins/cmake/: fanuc_m16ib_moveit_pluginsConfig.cmake
devel/share/fanuc_m16ib_support/cmake/: fanuc_m16ib_supportConfig.cmake
devel/share/fanuc_resources/cmake/: fanuc_resourcesConfig.cmake
devel/share/panda_moveit_config/cmake/: panda_moveit_configConfig.cmake
devel/share/pick_place/cmake/: pick_place-msg-paths.cmake  pick_placeConfig.cmake
src/fanuc_m16ib20_moveit_config/launch/: moveit.rviz
src/panda_moveit_config/launch/: moveit.rviz  moveit_rviz.launch
src/pick_place/: CMakeLists.txt  package.xml
src/pick_place/doc/pick_place/: CMakeLists.txt
src/pick_place/doc/pick_place/src/: panda_pick_place.cpp  panda_pick_place_budong.cpp
src/pick_place/msg/: MsgTransform.msg
src/pick_place/src/: panda_pick_place.cpp  qnode.cpp
src/pick_place/srv/: SrvTransform.srv
src/tcp_ip/: CMakeLists.txt
src/tcp_ip/launch/: tcp.launch
src/tcp_ip/src/: .tcp_client.cpp.swp  .topic_subscriber.cpp.swp  a.out  ethernet_socket.cpp  tcp.py  tcp_client.cpp
src/test_gui/: CMakeLists.txt  package.xml
src/test_gui/resources/: images.qrc
src/test_gui/src/: main.cpp  main_window.cpp  qnode.cpp  transform.cpp
src/test_gui/srv/: SrvTransform.srv
src/test_gui/ui/: main_window.ui  main_window.ui.autosave
(+28 files in other folders)
